--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,27 @@
 body {
+  background: rgb(148, 216, 149);
+  padding: 0;
   font-family: 'Roboto', sans-serif; /* Используем Roboto как основной шрифт */
-  margin: 2em;
+  margin: 0.2em;
   color: #3d3d3d;
 }
 
 h1 {
+  display: flex;
+  justify-content: center;
+  width: 2050px;
   color: #007f8b; /* Цвет заголовка */
 }
 
 h2 {
+  display: flex;
+  justify-content: center;
   clear: both; /* Очистка float */
+}
+
+p{
+  display: flex;
+  justify-content: center;
 }
 
 em {
@@ -45,13 +57,17 @@ section {
   width: 48%;
   margin: 2% 1%;
   cursor: pointer;
+  
 }
 
+.videoView{
+  left: 900px;
+}
 .detectOnClick p,
 .videoView p {
   position: absolute;
   padding: 5px;
-  background-color: #007f8b; /* Цвет фона */
+  background-color: #188089; /* Цвет фона */
   color: #fff; /* Белый текст */
   border: 1px dashed rgba(255, 255, 255, 0.7); /* Пунктирная рамка */
   z-index: 2;
